# rosbag_reader

./: .clang-tidy  .cmake-format.yaml  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  config.yaml  pyproject.toml
.github/: CODEOWNERS
cmake/: StaticAnalyzers.cmake
cpp/rosbag_reader/: CMakeLists.txt
cpp/rosbag_reader/core/: CMakeLists.txt  rosbag.cpp  rosbag.h
cpp/rosbag_reader/messages/: CMakeLists.txt  messages.h  sensor_msgs.cpp  sensor_msgs.hpp  std_msgs.cpp  std_msgs.hpp
include/utils/: math.hpp  parse.hpp
includes/: header.hpp  pointField.hpp  savePCD.hpp  utils.hpp
includes/ros_messages/: sensor_msgs.hpp
includes/utils/: bag_utils.hpp  io_utils.hpp
python/: CMakeLists.txt  LICENSE  MANIFEST.in  pyproject.toml
python/rosbag_reader/: __init__.py  rosbag_reader.py
python/rosbag_reader/pybind/: CMakeLists.txt  rosbag_reader_pybind.cpp
python/rosbag_reader/tools/: cmd.py
src/: CMakeLists.txt  main.cpp  parsePointCloud2Msgs.cpp  read_pointcloud2.cpp  rosbag.cpp  rosbag.h  rosbag.hpp  rosbag_readerConfig.cmake.in  test.cpp
src/cmake/: install.cmake
src/pybind/: CMakeLists.txt  rosbag_reader_pybind.cpp
src/ros_messages/: CMakeLists.txt  ros_messages.h  sensor_msgs.cpp  sensor_msgs.hpp  std_msgs.cpp  std_msgs.hpp
src/rosbag_reader/: CMakeLists.txt  rosbag.cpp  rosbag.h
src/rosbag_reader/cmake/: install.cmake
src/rosbag_reader/ros_messages/: CMakeLists.txt  ros_messages.h
src/utils/: CMakeLists.txt  bag_utils.cpp  header.cpp  io.cpp  io.hpp  io_utils.cpp  math.hpp  parse.cpp  parse.hpp  pointField.cpp  pointcloud2.cpp  savePCD.cpp  utils.cpp  utils.h  utils.hpp
test/: CMakeLists.txt  parse_laserscan.cpp  parse_pcl.cpp  parse_pcl2.cpp
